--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Run script
-        run: python task9_github/workbook/task9.py
+      - name: Run Task5
+        run: python Task5.py
 
   build:
     runs-on: ubuntu-latest
