--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Run Task5.py
-        run: python Task5.py
+      - name: Run tests
+        run: python -m unittest discover -s test
 
   build:
     runs-on: ubuntu-latest
